[package]
name = "purl"
version = "0.1.6"
edition = "2021"
description = "A Package URL implementation with customizable package types"
repository = "https://github.com/phylum-dev/purl/"
license = "MIT"
keywords = ["purl"]
categories = ["encoding", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["package-type", "smartstring"]
package-type = ["phf", "unicase"]

[dependencies]
hex = "0.4.3"
percent-encoding = "2.2.0"
phf = { version = "0.11.1", features = ["macros", "unicase"], optional = true }
serde = { version = "1.0.150", optional = true, features = ["derive"] }
smartstring = { version = "1.0.1", optional = true }
thiserror = "2.0.12"
unicase = { version = "2.6.0", optional = true }

[dev-dependencies]
maplit = "1.0.2"

[package.metadata.docs.rs]
all-features = true
targets = []
rustdoc-args = ["--cfg", "docsrs"]
