[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
convert_case = "0.6.0"
lazy_static = "1.4.0"
prettyplease = "0.2.4"
proc-macro2 = "1.0.47"
purl = { path = "../purl" }
quote = "1.0.21"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
syn = { version = "2.0.13", features = ["full"] }
